# Circuit_Partitioning

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/algorithm/: CMakeLists.txt  Coarsening.cpp  Coarsening.hpp  EC_Coarsening.cpp  EC_Coarsening.hpp  HEC_Coarsening.cpp  HEC_Coarsening.hpp  check.hpp  netgen.cpp  netgen.hpp  partition.cpp  partition.hpp
src/database/: CMakeLists.txt  Hypergraph.cpp  Hypergraph.hpp  database.cpp  database.hpp  info.hpp  parser.cpp  parser.hpp  result.cpp  result.hpp  type.hpp
test/: 100.txt  1000.txt  10000.txt  500.txt  5000.txt
